# GraphRAG

./: .env.example  .gitignore  F(x).cpp  Knowledge_Graph_Construction - Copy.ipynb  Knowledge_Graph_Construction_LLM.ipynb  README.md  app.py  buildGraphRAG02.ipynb  buildRAG.ipynb  neo4j_graph_disp.html  pipeline.py  pyproject.toml  requirements.txt  visualizeGRAPH.ipynb
Function_f(x)/: F(x).cpp  Function_f(x).cbp  Function_f(x).depend  Function_f(x).layout
assets/: GraphRAG.excalidraw
notebooks/: prompt.txt
utils/: embeddings.py  file_processor.py  graph_manager.py  query_processor.py
